# opengl_template_trab_gb

./: .gitmodules  CMakeLists.txt  README.md  TODO.md  run  setup
cmake/: Libraries.cmake  Settings.cmake
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: application.cpp  callback_window.cpp  characters.cpp  game.cpp  game_object.cpp  game_setup.cpp  gl_config.cpp  main.cpp  opengl_config_setup.cpp  render.cpp  renderer.cpp  resources.cpp  shader.cpp  shader_wrapper.cpp  texture.cpp  utils.cpp
src/headers/: application.hpp  callback_window.hpp  characters.hpp  game.hpp  game_object.hpp  game_setup.hpp  gl_config.hpp  level.hpp  main.hpp  object.hpp  opengl_config_setup.hpp  render.hpp  renderer.hpp  resources.hpp  shader.hpp  shader_object.hpp  shader_wrapper.hpp  texture.hpp  utils.hpp  vertex_object.hpp
src/headers/pch/: default.hpp  opengl_libs.hpp
src/shaders/: 1_a.frag  1_b.frag  1_c.frag  1_d.frag  1_e.frag  1_f.frag  playgroud.frag  tga.frag  tga.vert  triangle.frag  triangle.vert  triangle_fs.glsl  triangle_uniform.frag  triangle_vs.glsl
